# openhands-resolver

./: .gitignore  .openhands_instructions  .pre-commit-config.yaml  LICENSE  Procfile  README.md  pyproject.toml
"b/openhands_resolver/: issue_definitions.py\""
"b/tests/: test_resolve_issues.py\""
.github/workflows/: auto-fix-issues.yml  ci.yml  openhands-resolver-experimental.yml  openhands-resolver.yml
examples/: openhands-resolver.yml
github_resolver/: .backup.resolve_issues.py  .backup.send_pull_request.py  .backup.update_pr.py  .backup.utils.py  github_issue.py  io_utils.py  main.py  resolve_issues.py  resolver_output.py  send_pull_request.py  update_pr.py  utils.py  visualize_resolver_output.py
github_resolver/prompts/repo_instructions/: all-hands-ai___github-resolver.txt  all-hands-ai___openhands.txt  rbren___rss-parser.txt
github_resolver/prompts/resolve/: basic-with-tests.jinja  basic.jinja
openhands_resolver/: __init__.py  app.py  feedback.py  github_issue.py  io_utils.py  issue_definitions.py  resolve_all_issues.py  resolve_issue.py  resolve_issues.py  resolver_output.py  send_pull_request.py  utils.py  visualize_resolver_output.py
openhands_resolver/patching/: patch.py
openhands_resolver/prompts/guess_success/: pr-feedback-check.jinja
openhands_resolver/prompts/resolve/: basic-followup.jinja  basic-with-tests.jinja  basic.jinja  pr-review-check.jinja  pr-thread-check.jinja
tests/: .backup.test_resolve_issues.py  .backup.test_send_pull_request.py  .backup.test_update_pr.py  .backup.test_utils.py  test_add_tests.py  test_event_stream.py  test_feedback.py  test_guess_success.py  test_imports.py  test_issue_handler.py  test_pr_handler_guess_success.py  test_pr_title_escaping.py  test_remote_runtime.py  test_resolve_issues.py  test_resolve_issues_new.py  test_resolve_issues_updated.py  test_send_pull_request.py  test_update_pr.py  test_utils.py  test_version.py
tests/mock_output/: output.jsonl
tests/mock_output/repo/src/: PullRequestViewer.tsx
