[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "openhands-resolver"
version = "0.1.3"
description = "OpenHands Issue Resolver"
authors = ["All Hands AI"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/All-Hands-AI/openhands-resolver"
include = ["poetry.lock"]
packages = [
    { include = "openhands_resolver" },
]

[tool.poetry.dependencies]
python = "^3.11"
openhands-ai = "^0.9.5"
pandas = "^2.2.3"
pytest = "^8.3.3"

[tool.poetry.group.dev.dependencies]
mypy = "*"
ruff = "*"
black = "*"
types-requests = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-asyncio = "*"

