[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "openhands-resolver"
version = "0.2.5"
description = "OpenHands Issue Resolver"
authors = ["All Hands AI"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/All-Hands-AI/openhands-resolver"
include = ["poetry.lock"]
packages = [
    { include = "openhands_resolver" },
]

[tool.poetry.dependencies]
python = "^3.12"
openhands-ai = "^0.12.0"
pandas = "^2.2.3"
pytest = "^8.3.3"

[tool.poetry.group.dev.dependencies]
mypy = "*"
ruff = "*"
black = "*"
types-requests = "*"
pre-commit = "*"
types-toml = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-asyncio = "*"

