[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "openhands-resolver"
version = "0.3.1"
description = "OpenHands Issue Resolver"
authors = ["All Hands AI"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/All-Hands-AI/openhands-resolver"
include = ["poetry.lock"]
packages = [
    { include = "openhands_resolver" },
]

[tool.poetry.dependencies]
python = "^3.12"
openhands-ai = ">=0.13.1,<0.14.0"

pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
mypy = "*"
ruff = "*"
black = "*"
types-requests = "*"
pre-commit = "*"
types-toml = "*"

[tool.poetry.group.test.dependencies]
pytest = ">=6.2.5,<9.0.0"
pytest-mock = ">=3.14.0"
pytest-asyncio = "*"


